--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Setup npm
       uses: actions/setup-node@v3
       with:
-        node-version: '20.x'
+        node-version: '20.9.0'
         cache: 'npm'
     - name: Build
       run: |
@@ -28,5 +28,5 @@ jobs:
         npm run build
     - name: Deploy static site to S3 bucket
       run: |
-        aws s3 sync ./build/ s3://ajmedeio-portfolio-content --delete
+        aws s3 sync ./public/ s3://ajmedeio-portfolio-content --delete
         aws cloudfront create-invalidation --distribution-id E6CWIHQYLBAL9 --paths '/*'
