--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,14 @@ build
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 .idea
+.svelte-kit
+package
