--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build
       run: |
         npm ci
-        npm run build
+        npx quartz build
     - name: Deploy static site to S3 bucket
       run: |
         aws s3 sync ./public/ s3://ajmedeio-portfolio-content --delete
